Player leaving, getting ready and joining the game

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,12 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "prettier": {
+    "trailingComma": "es5",
+    "tabWidth": 2,
+    "semi": true,
+    "singleQuote": false
+  },
   "dependencies": {
     "@types/node": "18.16.3",
     "@types/react": "18.2.0",
